--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ pygame = "^2.6.1"
 dearpygui = "^1.11.1"
 pyinstaller = "^6.10.0"
 pillow = "^10.4.0"
+jaconv = "^0.4.0"
+sympy = "^1.13.3"
 
 [tool.poetry.group.dev.dependencies]
 pyinstaller = "^6.10.0"
