--- a/.gitignore
+++ b/.gitignore
@@ -223,4 +223,5 @@ $RECYCLE.BIN/
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 tools/gamemap_editor/config.*
+tools/gamemap_viewer/config.*
 
